infra/test-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-b
  namespace: default
  labels:
    app: test-pod
spec:
  containers:
    - name: test-container
      image: busybox
      command: ["sleep", "3600"]  # Keep the pod running for testing
