infra/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pingpong-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-a
  namespace: pingpong-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-a
  template:
    metadata:
      labels:
        app: pingpong-a
    spec:
      containers:
        - name: pingpong-a
          image: us.gcr.io/esg-demo-446616/new-ping-pong:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"  # Request 128Mi memory
              cpu: "100m"      # Request 100m (0.1) CPU
            limits:
              memory: "256Mi"  # Limit memory to 256Mi
              cpu: "200m"      # Limit CPU to 200m (0.2) 
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000       
---
apiVersion: v1
kind: Service
metadata:
  name: pingponger-a
  namespace: pingpong-a
spec:
  selector:
    app: pingpong-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: pingpong-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-b
  namespace: pingpong-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-b
  template:
    metadata:
      labels:
        app: pingpong-b
    spec:
      containers:
        - name: pingpong-b
          image: us.gcr.io/esg-demo-446616/new-ping-pong:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"  # Request 128Mi memory
              cpu: "100m"      # Request 100m (0.1) CPU
            limits:
              memory: "256Mi"  # Limit memory to 256Mi
              cpu: "200m"      # Limit CPU to 200m (0.2)
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000    

---
apiVersion: v1
kind: Service
metadata:
  name: pingponger-b
  namespace: pingpong-b
spec:
  selector:
    app: pingpong-b
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
