infra/deny-all-pingpong-a.yaml

# Deny all traffic within pingpong-a namespaces (except allowed traffic)

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: pingpong-a
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
